tests/baselines/reference/computedPropertyNames17_ES6(strict=true).errors.txt
computedPropertyNames17_ES6.ts(3,9): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
computedPropertyNames17_ES6.ts(4,16): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
computedPropertyNames17_ES6.ts(4,16): error TS7032: Property '[true]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
computedPropertyNames17_ES6.ts(4,23): error TS7006: Parameter 'v' implicitly has an 'any' type.
computedPropertyNames17_ES6.ts(5,9): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
computedPropertyNames17_ES6.ts(6,9): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
computedPropertyNames17_ES6.ts(6,9): error TS7032: Property '[{}]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
computedPropertyNames17_ES6.ts(6,14): error TS7006: Parameter 'v' implicitly has an 'any' type.
computedPropertyNames17_ES6.ts(7,16): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
computedPropertyNames17_ES6.ts(8,9): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
computedPropertyNames17_ES6.ts(8,9): error TS7032: Property '[null]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
computedPropertyNames17_ES6.ts(8,16): error TS7006: Parameter 'v' implicitly has an 'any' type.


==== computedPropertyNames17_ES6.ts (12 errors) ====
    var b: boolean;
    class C {
        get [b]() { return 0;}
            ~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
        static set [true](v) { }
                   ~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
                   ~~~~~~
!!! error TS7032: Property '[true]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                          ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        get [[]]() { return 0; }
            ~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
        set [{}](v) { }
            ~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
            ~~~~
!!! error TS7032: Property '[{}]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                 ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
        static get [undefined]() { return 0; }
                   ~~~~~~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
        set [null](v) { }
            ~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
            ~~~~~~
!!! error TS7032: Property '[null]' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
                   ~
!!! error TS7006: Parameter 'v' implicitly has an 'any' type.
    }